[tool.poetry]
name = "lab-bot"
version = "0.1.0"
description = ""
authors = ["Laurence Rawlings <contact@laurencerawlings.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
replit = "^2.0.0"
flask = "^1.1.2"
discord-py-slash-command = "^1.0.9"
firebase-admin = "^4.5.2"
python-dotenv = "^0.15.0"
google = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
